More cleanup
took care of some compiler and lint warnings.